--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,11 +8,11 @@
 </head>
 <body style="background-image : url('/assets/wood7.jpg')">
   <div class="clearfix">
-    <img  class="pull-left gap-left" src="/assets/pizza.png" style="width: 150px; height: 150px; margin-left: 100px;">
+    <!-- <img  class="pull-left gap-left" src="/assets/pizza.png" style="width: 150px; height: 150px; margin-left: 100px;">
 
     <img  class="pull-right gap-left" src="/assets/pizza.png" style="width: 150px; height: 150px; margin-right: 100px;">
 
-    <img class="center-block" src="/assets/title.png" style="height:150px;">
+    <img class="center-block" src="/assets/title.png" style="height:150px;"> -->
   </div>
   
   
